when amount is big, text will no longer wrap

--- a/src/app/css/assign.component.css
+++ b/src/app/css/assign.component.css
@@ -336,15 +336,15 @@ h3{
 
 .schedule__dialog__form__list{
   position: absolute;
-  top: 32px;
-  left: 89px;
-  width: 300px;
+  top: 40px;
+  width: 100%;
   text-align: left;
   color: #999999;
   list-style: none;
   background-color: #F8F8F8;
   font-family: Avenir_Light;
-  padding: 0px;
+  padding: 0;
+  margin:0;
   overflow: hidden;
   z-index: 999999999;
 }
@@ -369,5 +369,10 @@ h3{
   color: #2C2B57;
   display: inline-block;
   margin-right: 15px;
-  width: 60px;
+  width: auto;
+}
+
+.wrapping_inputlist {
+  display: inline-block;
+  position: relative;
 }
